minimal working version

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,8 @@ python_requires = >=3.6
 setup_requires = setuptools_scm
 install_requires =
     numpy
-    cython
-
+    astropy
+    scipy
 
 [options.extras_require]
 test =
