--- a/tox.ini
+++ b/tox.ini
@@ -90,4 +90,4 @@ skip_install = true
 changedir = .
 description = check code style, e.g. with flake8
 deps = flake8
-commands = flake8 hardcorr --count --max-line-length=100
+commands = flake8 hardcorr --count --max-line-length=100 --ignore=E741,E226,W504,W504
